[Screen Time Refactoring] Make the Screen Time preference defaults overridable https://bugs.webkit.org/show_bug.cgi?id=287972 rdar://145149303
Reviewed by Tim Horton.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Make the preference defaults overridable for easier testing.

Canonical link: https://commits.webkit.org/290632@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6470,7 +6470,8 @@ ScreenOrientationLockingAPIEnabled:
 
 ScreenTimeEnabled:
   type: bool
-  status: unstable
+  status: internal
+  defaultsOverridable: true
   condition: ENABLE(SCREEN_TIME)
   humanReadableName: "Screen Time"
   humanReadableDescription: "Enable Screen Time"
