[GPUP][macOS] Add sandbox telemetry to IOKit user client AppleIntelMEUserClient https://bugs.webkit.org/show_bug.cgi?id=287935 rdar://145108881
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/290665@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -176,9 +176,20 @@
         (iokit-user-client-class "IOFramebufferSharedUserClient"))
 
     ;; These are needed for Encrypted Media on some hardware (MacMini8,1 for example)
+    (if (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES")
+        (allow IOKIT_OPEN_USER_CLIENT (with report) (with telemetry)
+            (iokit-user-client-class "AppleIntelMEUserClient")
+            (apply-message-filter
+                (allow (with report) (with telemetry)
+                    iokit-async-external-method
+                    iokit-external-method
+                    iokit-external-trap)))
+        ;; else
+        (allow IOKIT_OPEN_USER_CLIENT
+            (iokit-user-client-class "AppleIntelMEUserClient")))
+
     (allow IOKIT_OPEN_USER_CLIENT
         (iokit-user-client-class
-            "AppleIntelMEUserClient"
             "AppleSNBFBUserClient"))
 
     ;; QuartzCore
