--- a/Source/WebKit/GPUProcess/media/RemoteCDMFactoryProxy.messages.in
+++ b/Source/WebKit/GPUProcess/media/RemoteCDMFactoryProxy.messages.in
@@ -31,7 +31,7 @@
     EnabledBy=EncryptedMediaAPIEnabled
 ]
 messages -> RemoteCDMFactoryProxy {
-    CreateCDM(String keySystem) -> (std::optional<WebKit::RemoteCDMIdentifier> identifier, struct WebKit::RemoteCDMConfiguration configuration) Synchronous
+    CreateCDM(String keySystem, String mediaKeysHashSalt) -> (std::optional<WebKit::RemoteCDMIdentifier> identifier, struct WebKit::RemoteCDMConfiguration configuration) Synchronous
     SupportsKeySystem(String keySystem) -> (bool result) Synchronous
     RemoveInstance(WebKit::RemoteCDMInstanceIdentifier identifier)
     RemoveSession(WebKit::RemoteCDMInstanceSessionIdentifier identifier)
