Add Drag Gesture for StageMode for Model View https://bugs.webkit.org/show_bug.cgi?id=287048 rdar://137779076
Reviewed by Wenson Hsieh and Ada Chan.

This PR is the second part of 3 code changes used to introduce stagemode interactions to the model view.
Specifically, this code change adds a UIPanGestureRecognizer that will be used to update the entityTransform
for the model view in rdar://141251753. When the stagemode attribute is set to orbit, and we have hit an
HTMLModelElement, the gesture will feed transform updates to the model player, which will use those transforms
to update the transform of the model. We wrap the model inside an interaction container, to separate gesture-
based transform updates from JavaScript/Animation-driven transform updates. Also, transform supplied by the
gesture will be fed into a StageModeInteractionDriver that will alter the transform of the model, depending
on the stagemode attribute that has been set for the element.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::supportsStageModeInteraction const):
(WebCore::HTMLModelElement::updateStageModeTransform):
(WebCore::HTMLModelElement::endStageModeInteraction):
- Add API calls to determine if stagemode is defined for the model; to update the model via the model player;
and end the interaction via the model player once the gesture terminates

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::supportsStageModeInteraction const):
(WebCore::HTMLModelElement::beginStageModeTransform):
(WebCore::HTMLModelElement::updateStageModeTransform):
(WebCore::HTMLModelElement::endStageModeInteraction):
- Add API calls to determine if stagemode is defined for the model; to update the model via the model player;
and end the interaction via the model player once the gesture terminates

* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/Modules/model-element/ModelPlayer.cpp:
(WebCore::ModelPlayer::b

--- a/Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.messages.in
+++ b/Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.messages.in
@@ -39,6 +39,9 @@ messages -> ModelProcessModelPlayerProxy {
     SetEnvironmentMap(Ref<WebCore::SharedBuffer> data)
     SetHasPortal(bool hasPortal)
     SetStageMode(enum:bool WebCore::StageModeOperation stagemodeOp)
+    BeginStageModeTransform(WebCore::TransformationMatrix transform)
+    UpdateStageModeTransform(WebCore::TransformationMatrix transform)
+    EndStageModeInteraction()
 }
 
 #endif
