[GTK] Switch the GTK performance bot to use Wayland instead of X11 https://bugs.webkit.org/show_bug.cgi?id=288012
Reviewed by Carlos Garcia Campos.

The GTK performance bot has been upgraded (machine is still the same,
but now runs on Debian-12 instead of Debian-10)

And seizing the upgrade we configured the GNOME session where it runs
to use Wayland instead of X11.

* Tools/CISupport/build-webkit-org/config.json:

Canonical link: https://commits.webkit.org/290712@main

--- a/Tools/CISupport/build-webkit-org/config.json
+++ b/Tools/CISupport/build-webkit-org/config.json
@@ -519,7 +519,7 @@
                   {
                     "name": "GTK-Linux-64-bit-Release-Perf", "factory": "DownloadAndPerfTestFactory",
                     "platform": "gtk", "configuration": "release", "architectures": ["x86_64"],
-                    "additionalArguments": ["--display-server=xorg"],
+                    "additionalArguments": ["--display-server=wayland"],
                     "workernames": ["gtk-linux-bot-8"]
                   },
                   {
