--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6113,6 +6113,16 @@ struct WebCore::VideoFrameTimeMetadata {
     WebCore::FontSmoothingMode smoothingMode;
 };
 
+#if ENABLE(TOUCH_EVENT_REGIONS)
+header: <WebCore/EventRegion.h>
+[CustomHeader] struct WebCore::TouchEventListenerRegion {
+    WebCore::Region start;
+    WebCore::Region end;
+    WebCore::Region move;
+    WebCore::Region cancel;
+};
+#endif
+
 class WebCore::EventRegion {
     WebCore::Region m_region;
 #if ENABLE(TOUCH_ACTION_REGIONS)
@@ -6121,6 +6131,10 @@ class WebCore::EventRegion {
 #if ENABLE(WHEEL_EVENT_REGIONS)
     WebCore::Region m_wheelEventListenerRegion;
     WebCore::Region m_nonPassiveWheelEventListenerRegion;
+#endif
+#if ENABLE(TOUCH_EVENT_REGIONS)
+    WebCore::TouchEventListenerRegion m_touchEventListenerRegion;
+    WebCore::TouchEventListenerRegion m_nonPassiveTouchEventListenerRegion;
 #endif
 #if ENABLE(EDITABLE_REGION)
     std::optional<WebCore::Region> m_editableRegion;
