[Cocoa] Adopt CASpatialAudioExperience rdar://145320517 https://bugs.webkit.org/show_bug.cgi?id=288240
Reviewed by Andy Estes.

Add support for CASpatialAudioExperience as a replacement for spatial tracking labels.

CASpatialAudioExperiences require a few pieces of information: whether the view is
currently visible (i.e., the web view isn't currently in a background tab that's not
rooted in the view heirarchy), whether the audio is automatically associated with
a visible layer (as is the case with AVPlayerLayer and AVSampleBufferRenderSynchronizer).
Currently the behavior is re-implemented across multiple different MediaPlayer subtypes,
so provide a helper function for creating these experience objects that can be
re-used.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::sceneIdentifierDidChange):
(WebCore::AudioContext::sceneIdentifier const):
* Source/WebCore/Modules/webaudio/AudioContext.h:
* Source/WebCore/Modules/webaudio/AudioDestinationNode.h:
(WebCore::AudioDestinationNode::setSceneIdentifier):
* Source/WebCore/Modules/webaudio/BaseAudioContext.h:
(WebCore::BaseAudioContext::sceneIdentifier const):
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:
(WebCore::DefaultAudioDestinationNode::createDestination):
(WebCore::DefaultAudioDestinationNode::setSceneIdentifier):
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:
* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/spi/cocoa/AudioToolboxCoreSPI.h: Added.
* Source/WebCore/SourcesCocoa.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::sceneIdentifierDidChange):
* Source/WebCore/dom/Document.h:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::sceneIdentifierDidChange):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/page/MediaProducer.h:
(WebCore::MediaProducer::sceneIdentif

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5930,6 +5930,22 @@ PreferSandboxedMediaParsing:
     WebKit:
       default: true
 
+PreferSpatialAudioExperience:
+  type: bool
+  status: internal
+  category: media
+  condition: HAVE(SPATIAL_AUDIO_EXPERIENCE)
+  humanReadableName: "Prefer Spatial Audio Experience over Spatial Tracking Labels"
+  humanReadableDescription: "Prefer Spatial Audio Experience over Spatial Tracking Labels"
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+  defaultsOverridable: true
+
 PrivateClickMeasurementDebugModeEnabled:
   type: bool
   status: developer
