[UnifiedPDF] [iOS] Occasionally, loading a PDF with non-default Safari zoom scale applied shrinks the PDF content https://bugs.webkit.org/show_bug.cgi?id=288495 rdar://145325400
Reviewed by Abrar Rahman Protyasha.

Even though Safari per-site zoom (`_viewScale`) settings are disabled for PDF documents, it's still
possible to load a PDF document in Safari with a non-default page zoom by changing the zoom scale on
a non-PDF-document page hosted on the same domain. In this case, Safari calls into `-_setViewScale:`
on the web view containing the PDF.

From prior commits 290565@main and 290826@main, view scaling is meant to be completely disabled when
viewing unified PDFs. However, there's still one corner case in which it's possible for a PDF
document to be incorrectly sized, due to view scaling — if `setViewportConfigurationViewLayoutSize`
is called in the web process with a non-default view scale *before* the PDF document is installed
(i.e. `UnifiedPDFPlugin::installPDFDocument`), the PDF plugin will be set to the wrong height,
incorrectly taking the view scale into account.

To mitigate this, we effectively revert 290565@main and 290826@main and instead pull the logic to
avoid changing view scale (layout size scale factor) into the web process, in the case where a main-
frame plugin view exists and `pluginHandlesPageScaleFactor()` is `false`. This both ensures that the
effective layout size scale factor will always be 1 on iOS in the case where the mainframe is a
plugin `embed` element even if the client attempts to change the view scale as early as
`-webView:didCommitNavigation:`, since the web-process-side logic only depends on the existence of
the `mainFramePlugIn()`, which is initialized when the load commits in the web process.

Unfortunately, I wasn't able to consistently replicate this race condition in the form of an API or
layout test. I manually tested this by loading a PDF in Safari multiple times, and confirming (with
log statements) that the PDF is sized

--- a/Source/WebKit/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPageProxy.messages.in
@@ -553,12 +553,8 @@ messages -> WebPageProxy {
     [EnabledBy=SpeechSynthesisAPIEnabled] SpeechSynthesisResetState()
 #endif
 
-#if ENABLE(PDF_PLUGIN)
-    PluginDidInstallPDFDocument()
-#if PLATFORM(MAC)
+#if ENABLE(PDF_PLUGIN) && PLATFORM(MAC)
     ShowPDFContextMenu(struct WebKit::PDFContextMenu contextMenu, WebKit::PDFPluginIdentifier identifier) -> (std::optional<int32_t> selectedItem)
-#endif
-
 #endif
 
 #if ENABLE(PDF_HUD)
